fixed quill editor too big on assn editor page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -122,3 +122,6 @@ a {
 .ql-editor {
     min-height: 200px;
 }
+.django-quill-widget {
+    height: fit-content;
+}
